Dispatch LongPress to inner frames https://bugs.webkit.org/show_bug.cgi?id=106874

Patch by Yongsheng Zhu <yongsheng.zhu@intel.com> on 2013-01-20
Reviewed by Antonio Gomes.

Source/WebCore:

Do check whether a LongPress gesture event should be passed
to inner frames. If needed, dispatch it.

Tests: fast/events/touch/gesture/long-press-on-draggable-element-in-iframe-triggers-drag.html
       fast/events/touch/gesture/long-press-on-draggable-element-in-nested-iframes-triggers-drag.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleGestureLongPress):

LayoutTests:

* fast/events/touch/gesture/long-press-on-draggable-element-in-iframe-triggers-drag.html: Added.
* fast/events/touch/gesture/long-press-on-draggable-element-in-nested-iframes-triggers-drag.html: Added.
* fast/events/touch/gesture/resources/drag-inside-iframe2.html: Added.
* fast/events/touch/gesture/resources/drag-inside-nested-iframes2.html: Added.
* fast/events/touch/gesture/resources/drag-inside-nested-iframes3.html: Added.
* platform/chromium/fast/events/touch/gesture/long-press-on-draggable-element-in-iframe-triggers-drag-expected.txt: Added.
* platform/chromium/fast/events/touch/gesture/long-press-on-draggable-element-in-nested-iframes-triggers-drag-expected.txt: Added.

Canonical link: https://commits.webkit.org/125646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140292 268f45cc-cd09-0410-ab3c-d52691b4dbfc